[gd_scene load_steps=4 format=3 uid="uid://c54g2dafcysbp"]

[ext_resource type="Script" path="res://scripts/entity/enemies/triangle_small.gd" id="1_4k2v7"]
[ext_resource type="PackedScene" uid="uid://bnvly2b2x1q6u" path="res://scenes/entity/enemy_component.tscn" id="2_lvrqu"]
[ext_resource type="Texture2D" uid="uid://h52717culk65" path="res://assets/sprites/enemy/en_triangle_normal.png" id="3_vxmes"]

[node name="TriangleSmall" type="RigidBody2D" groups=["enemy"]]
gravity_scale = 0.0
script = ExtResource("1_4k2v7")

[node name="EnemyComponent" parent="." instance=ExtResource("2_lvrqu")]
SPEED = Vector2(0, -40)
LIFE = 1

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_vxmes")

[node name="RayTop" type="RayCast2D" parent="."]
position = Vector2(0, -8)
rotation = 1.5708
target_position = Vector2(-3, 0)

[node name="RayBottom" type="RayCast2D" parent="."]
position = Vector2(0, 8)
rotation = 3.14159
target_position = Vector2(-1.09673e-05, -3)

[node name="Hitbox" type="Area2D" parent="." groups=["damage_area"]]
collision_layer = 8
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Hitbox"]
polygon = PackedVector2Array(-8, 8, 8, 8, 0, -8, -1, -8)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-8, 8, 8, 8, 0, -8, -1, -8)
